[FIX] web: Adjust header image positioning to prevent QR code overlap in PDF report
Fixing bug where adding a big image to a layout's header ruins the layout, causing the QR code to be split across two pages, which does not follow the Swiss QR standards.

Steps to reproduce the bug:
1 - Install accounting and l10n_ch modules.
2 - Switch company to CH Company.
3 - Set up a bank account with a QR-IBAN in the Accounting app.
4 - Go to Settings and add a large image to the invoice layout (company slogan) and some text.
5 - Create an invoice for a customer in Switzerland and print it out as a PDF.

Before the bug fix, the large header image would push down the page, causing problems with the QR code being split into two pages, which does not comply with the Swiss QR standards.

Task-id: 3260001

--- a/addons/web/static/src/webclient/actions/reports/layout_assets/layout_boxed.scss
+++ b/addons/web/static/src/webclient/actions/reports/layout_assets/layout_boxed.scss
@@ -5,7 +5,8 @@
 .o_boxed_header {
     border-bottom: 1px solid map-get($grays, '200');
     img {
-        max-height: 100px;
+        max-height: 96px;
+        max-width: 200px;
     }
     h4 {
         color: #999999;
