--- a/addons/web/static/src/webclient/actions/reports/layout_assets/layout_clean.scss
+++ b/addons/web/static/src/webclient/actions/reports/layout_assets/layout_clean.scss
@@ -2,8 +2,8 @@
     color: #000;
 }
 .o_clean_header img {
-    max-height: 90px;
-    max-width: 300px;
+    max-height: 96px;
+    max-width: 200px;
 }
 .o_clean_footer {
     margin: 0 3px;
