--- a/addons/web/static/src/webclient/actions/reports/layout_assets/layout_standard.scss
+++ b/addons/web/static/src/webclient/actions/reports/layout_assets/layout_standard.scss
@@ -27,3 +27,9 @@
         margin-bottom: 0;
     }
 }
+
+.o_standard_header img {
+    max-height: 45px;
+    max-width: 200px;
+    margin-bottom: 16px;
+}
